@@ -2,7 +2,6 @@ package de.tum.cit.aet.artemis.core.exception.failureAnalyzer;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -17,9 +16,14 @@ class WeaviateConfigurationFailureAnalyzerTest {
 
     private final WeaviateConfigurationFailureAnalyzer analyzer = new WeaviateConfigurationFailureAnalyzer();
 
+    private void assertActionContainsBothOptions(FailureAnalysis analysis) {
+        assertThat(analysis.getAction()).contains("Update your application configuration").contains("Option 1: Provide valid Weaviate configuration")
+                .contains("Option 2: Disable Weaviate if not needed");
+    }
+
     @Test
     void testAnalyzeWithMissingProperties() {
-        List<String> missingProperties = Arrays.asList("httpHost", "httpPort", "grpcPort");
+        List<String> missingProperties = List.of("httpHost", "httpPort", "grpcPort");
         WeaviateConfigurationException exception = new WeaviateConfigurationException("Invalid configuration", missingProperties);
         RuntimeException rootFailure = new RuntimeException("Root cause", exception);
 
@@ -31,16 +35,14 @@ class WeaviateConfigurationFailureAnalyzerTest {
         assertThat(analysis.getDescription()).contains("httpPort");
         assertThat(analysis.getDescription()).contains("grpcPort");
 
-        assertThat(analysis.getAction()).contains("Update your application configuration");
-        assertThat(analysis.getAction()).contains("enabled: true");
-        assertThat(analysis.getAction()).contains("enabled: false");
+        assertActionContainsBothOptions(analysis);
 
         assertThat(analysis.getCause()).isEqualTo(exception);
     }
 
     @Test
     void testAnalyzeWithSingleMissingProperty() {
-        List<String> missingProperties = Arrays.asList("httpHost");
+        List<String> missingProperties = List.of("httpHost");
         WeaviateConfigurationException exception = new WeaviateConfigurationException("Missing httpHost", missingProperties);
         RuntimeException rootFailure = new RuntimeException("Root cause", exception);
 
@@ -49,15 +51,13 @@ class WeaviateConfigurationFailureAnalyzerTest {
         assertThat(analysis).isNotNull();
         assertThat(analysis.getDescription()).contains("Invalid Weaviate configuration detected");
         assertThat(analysis.getDescription()).contains("httpHost");
-        assertThat(analysis.getAction()).contains("Update your application configuration");
-        assertThat(analysis.getAction()).contains("enabled: true");
-        assertThat(analysis.getAction()).contains("enabled: false");
+        assertActionContainsBothOptions(analysis);
         assertThat(analysis.getCause()).isEqualTo(exception);
     }
 
     @Test
     void testAnalyzeWithEmptyMissingProperties() {
-        List<String> missingProperties = Arrays.asList();
+        List<String> missingProperties = List.of();
         WeaviateConfigurationException exception = new WeaviateConfigurationException("General error", missingProperties);
         RuntimeException rootFailure = new RuntimeException("Root cause", exception);
 
@@ -65,9 +65,7 @@ class WeaviateConfigurationFailureAnalyzerTest {
 
         assertThat(analysis).isNotNull();
         assertThat(analysis.getDescription()).contains("Invalid Weaviate configuration detected");
-        assertThat(analysis.getAction()).contains("Update your application configuration");
-        assertThat(analysis.getAction()).contains("enabled: true");
-        assertThat(analysis.getAction()).contains("enabled: false");
+        assertActionContainsBothOptions(analysis);
         assertThat(analysis.getCause()).isEqualTo(exception);
     }
 }
